fix: fix some css and scrollbar stuff

--- a/client/src/scss/pages/dialog.scss
+++ b/client/src/scss/pages/dialog.scss
@@ -107,7 +107,6 @@
         align-items: center;
         flex-wrap: wrap;
         height: 100%;
-        overflow-y: scroll;
 
         .skins-list-item-container {
             width: 140px;
@@ -254,6 +253,7 @@
         flex-wrap: wrap;
         gap: 8px;
         justify-content: flex-start;
+        align-content: flex-start;
 
         .crosshairs-list-item-container {
             display: flex;
